# Changelog

## Rob's Study Notes

### 0.1.5 <small>_ October 29, 2021</small>

- Reorganized pages a little and worked on PDF rendering
- Added License
- Added Changelog
- Added Footnote Support
- Replaced Mermaid-based drawings with PNGs
- picoCTF Solution: Stonks
- picoCTF Solution: Glory of the Garden
- picoCTF Solution: So Meta
- picoCTF Solution: shark on wire 1
- picoCTF Solution: extensions
- picoCTF Solution: What Lies Within


### 0.1.4 <small>_ October 28, 2021</small>

- Adding picoCTF page and initial set of solutions
- picoCTF Solution: Cookies
- picoCTF Solution: Insp3ct0r
- picoCTF Solution: Scavenger Hunt
- picoCTF Solution: Nice netcat...
- picoCTF Solution: Static ain't always noise
- picoCTF Solution: Tab, Tab, Attack
- picoCTF Solution: Magikarp Ground Mission
- picoCTF Solution: Lets Warm Up
- picoCTF Solution: Warmed Up
- picoCTF Solution: 2Warm
- picoCTF Solution: what's a net cat?
- picoCTF Solution: strings it
- picoCTF Solution: Bases
- picoCTF Solution: First Grep
- picoCTF Solution: Based
- picoCTF Solution: plumbing
- picoCTF Solution: mus1c
- picoCTF Solution: flag_shop
- picoCTF Solution: 1_wanna_b3_a_r0ck5star


### 0.1.3 <small>_ October 27, 2021</small>

- Adding picoCTF page and initial set of solutions

- picoCTF Solution: GET aHEAD
- RingZer0 Solution: Hash Me Please
- RingZer0 Solution: Hash Me Reloaded
- RingZer0 Solution: I Hate Mathematics
- RingZer0 Solution: File recovery
- RingZer0 Solution: Bash Jail 1
- RingZer0 Solution: Bash Jail 2
- RingZer0 Solution: Client Side Validation Is Bad!
- RingZer0 Solution: Hashing Is More Secure
- RingZer0 Solution: Then Obfuscation Is More Secure


### 0.1.2 <small>_ October 26, 2021</small>

- Adding picoCTF page and initial set of solutions


### 0.1.1 <small>_ October 20, 2021</small>

- Adding information about VPN environment within lab
- Adding RingZer0 CTF page and initial stash of solutions

### 0.1.0 <small>_ October 6, 2021</small>

- Initial release