@@ -8,6 +8,7 @@
 - Added License
 - Added Changelog
 - Added Footnote Support
+- Added Password Cracking Notes
 - Replaced Mermaid-based drawings with PNGs
 - picoCTF Solution: Stonks
 - picoCTF Solution: Glory of the Garden
